get rid of invalid JAVA_OPTS