@@ -56,7 +56,7 @@ COPY --from=ant_build /dspace $DSPACE_INSTALL
 COPY scripts/run.sh $CATALINA_HOME/bin/run.sh
 RUN chmod +x $CATALINA_HOME/bin/run.sh
 
-ENV JAVA_OPTS="-Xmx500m -Xss200m -XX:CICompilerCount=2 -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintTenuringDistribution -XX:+UseConcMarkSweepGC"
+ENV JAVA_OPTS="-Xmx500m -Xss200m"
 
 # Run the "server" webapp off the /server path (e.g. http://localhost:8080/server/)
 #RUN ln -s $DSPACE_INSTALL/webapps/server   /usr/local/tomcat/webapps/server
